After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694703 - fallback to favicon instead of "upper left corner" image
fallback to favicon instead of "upper left corner" image
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Web Applications
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
3.8?
Depends on:
Blocks:
 
 
Reported: 2013-02-25 20:30 UTC by William Jon McCann
Modified: 2013-03-02 14:15 UTC
See Also:
GNOME target: 3.8
GNOME version: ---


Attachments
Fallback to favicon instead of page snapshot (2.80 KB, patch)
2013-02-25 21:04 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2013-02-25 20:30:14 UTC
I don't think falling back to a snapshot of the upper-left corner of the page is suiting us very well. For one, many pages use a centered, reading-width column for content and the upper left is just blank. Even when it isn't blank it often doesn't have any distinguishing characteristics. And it isn't very well associated with the "brand" of the app/site.

I think it would be better to fallback to showing a buttonized version of the favicon if it exists. I can't imagine many sites don't have anything like this.
Comment 1 William Jon McCann 2013-02-25 21:04:00 UTC
Created attachment 237393 [details] [review]
Fallback to favicon instead of page snapshot
Comment 2 Claudio Saavedra 2013-03-01 15:22:25 UTC
Review of attachment 237393 [details] [review]:

Looks good to me!

::: src/window-commands.c
@@ +525,3 @@
+			icon = webkit_favicon_database_try_get_favicon_pixbuf (webkit_get_favicon_database (),
+									       page_uri,
+	}

IIRC, if this fails you can ask the database to fetch the icon. But since this can only be accessed from a page already loaded, I suspect that you'll always get a favicon. I might be wrong though.

@@ -519,1 @@
-	snapshot = ephy_web_view_get_snapshot (data->view, x, y, w, h);

I think we don't use anymore this method (besides, wk is gaining API for this). We should probably remove it.
Comment 3 William Jon McCann 2013-03-02 14:15:52 UTC
Attachment 237393 [details] pushed as 8a00f5c - Fallback to favicon instead of page snapshot