Fallback to favicon instead of page snapshot

https://bugzilla.gnome.org/show_bug.cgi?id=694703